--- a/app.css
+++ b/app.css
@@ -27,16 +27,20 @@ tr {
 
 h2 {
     font-family: 'VALORANT';
+    font-size: 1.5em;
     text-shadow: 1px 5px 10px black;
     color: rgb(96, 242, 255);
     margin: 0px;
-    padding: 16px 0px;
+    padding: 12px 0px;
     background-color: rgba(222, 80, 80, 0.908);
     box-shadow: 0px 1px 2px black;
 }
 
 h5 {
     color: rgb(244, 249, 182);
+    font-family: 'Calibri', Tahoma;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 h4,
@@ -44,31 +48,26 @@ h6 {
     color: rgb(255, 255, 255);
     padding: 0px 20px;
     margin: 10px 0px;
+    font-family: 'Calibri', Tahoma;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .search {
     background-color: rgba(4, 37, 56, 0.871);
     border-radius: 20px;
     margin: 10px;
+    padding: 20px;
 }
 
 .show {
     background-color: rgba(4, 37, 56, 0.871);
     border-radius: 20px;
     margin: 10px;
-    height: 65%;
+    min-height:0px;
+    overflow: hidden;
     visibility: hidden;
-}
-
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    padding: 20px 20px 40px 20px;
-    size: auto;
-}
-
-.input {
-    padding-top: 40px;
+    padding: 20px;
 }
 
 input {
@@ -81,7 +80,7 @@ input {
     text-align: center;
     font-weight: bold;
     display: inline-block;
-    font-size: 17px;
+    font-size: 20px;
     margin: 4px 2px;
     cursor: pointer;
 }
@@ -110,7 +109,7 @@ select {
 
 option {
     padding: 30px;
-  }
+}
 
 div#agent_icon {
     width: auto;
@@ -122,15 +121,15 @@ div#agent_icon {
 
 div#player_card {
     width: auto;
-    height: 100%;
+    height: 50%;
     background-repeat: no-repeat, no-repeat;
-    background-size: auto 100%;
+    background-size: auto 80%;
     background-position: center;
 }
 
 #loading {
-    width: 2rem;
-    height: 2rem;
+    width: 3rem;
+    height: 3rem;
     border: 5px solid #f3f3f3;
     border-top: 6px solid rgb(222, 80, 80);
     border-radius: 100%;
