--- a/app.css
+++ b/app.css
@@ -23,7 +23,14 @@ tr {
     box-shadow: 0px 1px 2px black;
     background-color: rgba(0, 139, 139, 0.243);
     border-radius: 5px;
+    width: 50%;
+    height: 30%;
 }
+
+/* table#player_info {
+    width: 50%;
+    height: 30%;
+} */
 
 h2 {
     font-family: 'VALORANT';
@@ -57,24 +64,38 @@ h6 {
     background-color: rgba(4, 37, 56, 0.871);
     border-radius: 10px;
     margin: 10px;
-    padding: 20px;
+    padding: 10px;
 }
 
 .show {
     background-color: rgba(4, 37, 56, 0.871);
     border-radius: 10px;
     margin: 10px;
-    min-height:0px;
+    min-height: 600px;
     overflow: hidden;
     visibility: hidden;
-    padding: 20px;
+    padding: 10px;
 }
 
-input {
+input[type=text] {
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.4);
+    padding: 10px 15px;
+    text-align: center;
+    /* font-weight: bold;*/
+    display: inline-block;
+    font-size: 15px;
+    cursor: text;
+    width: 80%;
+    height: 60%;
+}
+
+input#get_stats {
     background-color: rgba(222, 80, 80, 0.908);
-    border: 1px 1px;
+    border: 1px solid #fff;
     border-radius: 15px;
-    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.4);
     color: rgb(255, 255, 255);
     padding: 15px 32px;
     text-align: center;
@@ -85,11 +106,11 @@ input {
     cursor: pointer;
 }
 
-input:hover {
+input#get_stats:hover {
     background-color: rgba(253, 147, 147, 0.908)
 }
 
-input:active {
+input#get_stats:active {
     background-color: rgb(62, 164, 173);
     box-shadow: 0 5px rgba(0, 0, 0, 0);
     transform: translateY(4px);
@@ -121,7 +142,8 @@ div#agent_icon {
 
 div#player_card {
     width: auto;
-    height: 50%;
+    height: 500px;
+    overflow: hidden;
     background-repeat: no-repeat, no-repeat;
     background-size: auto 80%;
     background-position: center;
