--- a/app.css
+++ b/app.css
@@ -26,13 +26,17 @@ tr {
     width: 50%;
     height: 30%;
 }
+caption {
+    text-align: left;
+    padding-left: 5px;
+}
 
 th{
     padding-left: 20px;
     padding-right: 20px;
 }
 
-table#scorecard {
+table#player_team,#enemy_team {
     display: block;
     overflow-x: auto;
     white-space: nowrap;
@@ -100,7 +104,7 @@ input[type=text] {
     display: inline-block;
     font-size: 15px;
     cursor: text;
-    width: 80%;
+    width: 60%;
     height: 60%;
 }
 
@@ -194,7 +198,7 @@ div#player_card {
 }
 
 ::-webkit-scrollbar {
-    width: 3px;
+    height: 8px;
   }
   
   ::-webkit-scrollbar-track {
